Implement email notification service with asynchronous sending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 secretJwtString = food123456789app123456789food123456789app123456789
+
+# Mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username = tilakdevelopment@gmail.com
+spring.mail.password = pzbn xtic ltbe ojzo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
