--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignore application secrets
+src/main/resources/application.properties
+src/main/resources/application-*.properties
+.env
