Implemented payment service and order review service

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
             <version>1.33.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>29.5.0</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
