--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.postgresql</groupId>-->
-<!--			<artifactId>postgresql</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -91,14 +91,6 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.4</version>
         </dependency>
-
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/software.amazon.awssdk/s3 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>software.amazon.awssdk</groupId>-->
-<!--            <artifactId>s3</artifactId>-->
-<!--            <version>2.32.33</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
         <dependency>
