--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=${PORT:8080}
 
+secretJwtString=${SECRET_JWT_STRING}
 
 # application-prod.properties
 spring.mail.host=smtp.gmail.com
